# little

./: flake.nix  little.cabal  little.nix
app/: Main.hs
examples/: 1.lit  Main.hs  script.lit
examples/Example/: Embed.hs  Expr.hs  Script.hs
src/: Little.hs
src/Little/: Code.hs  Doc.hs  Types.hs
