cabal-version:      2.4
name:               little
version:            0.1.0.0
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com

executable little
  main-is:          Main.hs
  build-depends:
    base ^>=4.16.1.0,
    attoparsec,
    bytestring,
    directory,
    lens,
    mtl,
    optparse-applicative,
    process,
    temporary,
    unordered-containers,
    xeno
  hs-source-dirs:   app
  ghc-options: -Wall -Werror
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
