cabal-version:      2.4
name:               little
version:            0.1.0.0
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com

library
    build-depends:
        base >=4.16 && <5
    hs-source-dirs:   src
    exposed-modules:
        Little
    ghc-options:      -Wall -Werror
    default-language: Haskell2010
