cabal-version:      2.4
name:               little
version:            0.1.0.0
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com

library
    build-depends:
        base >=4.16 && <5,
        containers,
        monoidal-containers,
        process,
        text >=2
    hs-source-dirs:   src
    exposed-modules:
        Little
        Little.Code
        Little.Doc
        Little.Types
    ghc-options:      -Wall -Werror
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable little-examples
    build-depends:
        base >=4.16 && <5,
        containers,
        little,
        text
    hs-source-dirs:   examples
    main-is:          Main.hs
    other-modules:
        Example.Embed
        Example.Expr
        Example.Script
    ghc-options:      -Wall -Werror
    default-language: Haskell2010
